syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "FreteServiceOuterClass";

package br.com.zup;

service FreteService {
  rpc salvar (FreteRequest) returns (FreteResponse) {}
}

message FreteRequest {
  string cep = 1;
}

message FreteResponse {
  double valor = 1;
}